--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006 -s public",
     "build-storybook": "build-storybook -s public",
-    "chromatic": "npx chromatic --project-token=2937cd8ab11d"
+    "chromatic": "npx chromatic --project-token=2937cd8ab11d",
+    "cypress": "cypress open",
+    "test-storybook": "test-storybook"
   },
   "eslintConfig": {
     "extends": [
@@ -54,11 +56,24 @@
     ]
   },
   "devDependencies": {
+    "@storybook/addon-a11y": "^6.4.20",
     "@storybook/addon-actions": "^6.4.9",
     "@storybook/addon-essentials": "^6.4.9",
+    "@storybook/addon-interactions": "^6.4.20",
     "@storybook/addon-links": "^6.4.9",
+    "@storybook/jest": "^0.0.10",
     "@storybook/node-logger": "^6.4.9",
     "@storybook/preset-create-react-app": "^3.1.7",
-    "@storybook/react": "^6.4.9"
+    "@storybook/react": "^6.4.9",
+    "@storybook/test-runner": "^0.0.4",
+    "@storybook/testing-library": "^0.0.9",
+    "@storybook/testing-react": "^1.2.4",
+    "cypress": "^9.5.3",
+    "jest-axe": "^6.0.0",
+    "msw": "^0.39.2",
+    "msw-storybook-addon": "^1.6.1"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
