--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -64,6 +64,28 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           # Grab this from the Chromatic manage page
           projectToken: ${{ secrets.CHROMATIC_PROJECT_TOKEN }}
+
+  
+  # Run user flow tests with Stroybook
+  user-flow:
+    runs-on: ubuntu-latest
+    needs: install-cache
+    steps:
+      - uses: actions/checkout@v2
+      - name: Restore yarn dependencies
+        uses: actions/cache@v2
+        id: yarn-cache
+        with:
+          path: |
+            ~/.cache/Cypress
+            node_modules
+          key: ${{ runner.os }}-yarn-v1-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-v1
+      - name: Test storybook run
+        uses: cypress-io/github-action@v2
+        with:
+          start: npm run test-storybook
   # Run user flow tests with Cypress
   user-flow:
     runs-on: ubuntu-latest
