--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "build-storybook": "build-storybook -s public",
     "chromatic": "npx chromatic --project-token=2937cd8ab11d",
     "cypress": "cypress open",
-    "test-storybook": "test-storybook"
+    "test-storybook": "test-storybook --url https://6246d9d83c273a003a14f053-iwbcjeipih.chromatic.com/ --no-stories-json"
   },
   "eslintConfig": {
     "extends": [
