--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -67,7 +67,7 @@ jobs:
 
   
   # Run user flow tests with Stroybook
-  user-flow:
+  storybook-user-flow:
     runs-on: ubuntu-latest
     needs: install-cache
     steps:
