--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -83,9 +83,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-yarn-v1
       - name: Test storybook run
-        run: |
-          yarn build
-          yarn test-storybook:ci
+        run: yarn test-storybook:ci
   # Run user flow tests with Cypress
   user-flow:
     runs-on: ubuntu-latest
