--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -58,11 +58,12 @@ jobs:
           key: ${{ runner.os }}-yarn-v1-${{ hashFiles('**/yarn.lock') }}
           restore-keys: |
             ${{ runner.os }}-yarn-v1
-      - name: Use Node.js 14.x
-        uses: actions/setup-node@v1
+      - uses: actions/setup-node@v2
         with:
-          node-version: 14.x
-      - name: Test storybook run
+          node-version: '14.x'
+      - name: Install dependencies
+        run: yarn
+      - name: Run Storybook tests
         run: yarn test-storybook:ci
         
   # Run visual and composition tests with Chromatic
