--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -19,8 +19,9 @@ jobs:
           key: ${{ runner.os }}-yarn-v1-${{ hashFiles('**/yarn.lock') }}
           restore-keys: |
             ${{ runner.os }}-yarn-v1
-       - uses: actions/setup-node@v2
-        with:
+       - name: Set to Node 14.x
+         uses: actions/setup-node@v2
+         with:
           node-version: '14.x'
       - name: Install dependencies if cache invalid
         if: steps.yarn-cache.outputs.cache-hit != 'true'
