--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -19,10 +19,10 @@ jobs:
           key: ${{ runner.os }}-yarn-v1-${{ hashFiles('**/yarn.lock') }}
           restore-keys: |
             ${{ runner.os }}-yarn-v1
-      - name: Set to Node 14
-        uses: actions/setup-node@v2
+      - name: Use Node.js 14
+        uses: actions/setup-node@v1
         with:
-        node-version: '14.x'
+          node-version: 14.x
       - name: Install dependencies if cache invalid
         if: steps.yarn-cache.outputs.cache-hit != 'true'
         run: yarn
